Changelog for Hitman

x.x
 - Keep forward reads from pairs that could not be merged
 - Optional step to remove sequencing library adapters

0.4 2014-04-09
 - Changed default values:
    * quality truncation increased to Q13 (5%)
    * minimum identity for taxonomic assignments increased to 95% (genus-level)
    * removing OTUs assigned to chloroplasts

0.3 2014-03-27
 - Primer orientation is now detected automatically
 - Using Trimmomatic instead of FASTX Toolkit and USEARCH for trimming to take
   advantage of multithreading
 - Using ea-utils instead of USEARCH for FASTQ statistics for ease of parsing
 - Parallelized some steps using GNU Parallel

0.2 2014-03-18
 - Support for paired-end amplicon reads
 - Support for GZIP-compressed input files
 - Input mapping files are now optional, use 2-columnm tabular format instead
   of QIIME, and have a --mapping argument (separate from --input)
 - Input sequences can be formatted in SFF or FASTQ
 - Argument --input is now used for all scripts to provide sequences

0.1 2014-03-13
 - Initial version