@@ -3,6 +3,7 @@ Changelog for Hitman
 x.x
  - Keep forward reads from pairs that could not be merged
  - Optional step to remove sequencing library adapters
+ - Named OTU removal step is now skipped if necessary
 
 0.4 2014-04-09
  - Changed default values:
